Fix contrast

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -265,7 +265,7 @@ h1 {
 }
 
 .tags__link {
-  background: rgb(191, 103, 95);
+  background: rgb(166, 87, 79);
   padding: 0.4rem 0.5rem 0.2rem;
   border-radius: 0.2rem;
   line-height: 1;
